Fix image cropping of users.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,8 +17,8 @@
 }
 
 .user-card {
-  height: 298px;
-  width: 284px;
+  height: 284px;
+  // width: 284px;
 }
 
 
